<resources>
    <string name="app_name">VisitSucre</string>
    <string name="account_type">com.apaza.moises.visitsucre.account</string>
    <string name="provider_authority">com.apaza.moises.visitsucre</string>
    <string name="action_settings">Settings</string>

    <string name="google_key">AIzaSyCS_fNa0Ea1GZEii0HUULcwnuF-2ThVnsQ</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_moises">Hello Moises</string>

    <string name="access">Access</string>
    <string name="signUp">Sign Up</string>
    <string name="on_boarding_subtitle1">Bla bla bla bla bla bla bla 1</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="password">Password</string>
    <string name="email">E-mail</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="first_time_here">First time here?</string>
    <string name="connect_with">Connect with</string>
    <string name="access_with_email">Or access with your e-mail</string>
    <string name="create_account">Or create an account</string>
    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone number</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="or_create_account">Or create an account</string>
    <string name="foods">Foods</string>
    <string name="hotel">Hotel</string>
    <string name="config">Setting</string>
    <string name="log_out">Logout</string>
    <string name="register">Register</string>
    <string name="address">Address</string>
    <string name="description">Description</string>
    <string name="new_category">New Category</string>
    <string name="data_no_found">Data no found</string>
    <string name="all">All</string>
    <string name="filter">Filter</string>
    <string name="select_location">Select location of the place</string>
    <string name="take_photo">Take photo</string>
    <string name="from_gallery">From gallery</string>
    <string name="add_image">Add image</string>
</resources>
