<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_register_place"
            android:checked="true"
            android:icon="@mipmap/ic_card"
            android:title="@string/register"/>

        <item
            android:id="@+id/nav_food"
            android:checked="true"
            android:icon="@mipmap/ic_camera"
            android:title="@string/foods" />
        <item
            android:id="@+id/nav_hotel"
            android:icon="@mipmap/ic_places_home"
            android:title="@string/hotel" />

        <!-- Sección de configuración -->
        <item
            android:id="@+id/configuration_section"
            android:title="@string/config">
            <menu>
                <item
                    android:id="@+id/nav_log_out"
                    android:icon="@android:drawable/ic_lock_power_off"
                    android:title="@string/log_out" />
            </menu>
        </item>
    </group>

</menu>