<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:moi="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/paddingMaxGlobal"
    tools:context=".ui.fragment.LoginFragment">

    <LinearLayout
        android:id="@+id/layoutLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connect_with"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/textSecondary"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginMinGlobal"
            android:orientation="vertical">

            <com.facebook.login.widget.LoginButton
                android:id="@+id/lb_login_facebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/paddingMediumGlobal"
                android:paddingBottom="@dimen/paddingMediumGlobal"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/marginMinGlobal"/>

            <com.google.android.gms.common.SignInButton
                android:id="@+id/b_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginMinGlobal"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/access_with_email"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/textSecondary"
            android:layout_marginTop="@dimen/marginMaxGlobal"/>

        <com.apaza.moises.visitsucre.ui.InputTextView
            android:id="@+id/itv_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            moi:iconImage="@mipmap/ic_email_grey600_24dp"
            moi:hint="@string/email"
            moi:errorEnabled="true"
            android:text="barto@visitsucre.com"
            android:inputType="textEmailAddress"/>

        <com.apaza.moises.visitsucre.ui.InputTextView
            android:id="@+id/itv_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            moi:iconImage="@mipmap/ic_lock_grey600_24dp"
            moi:hint="@string/password"
            moi:errorEnabled="true"
            android:text="asdasd"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/b_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_button"
            android:textColor="@android:color/white"
            android:text="@string/login" />

        <TextView
            android:id="@+id/forgotPassword"
            style="@style/TextViewTechnoSmall"
            android:text="@string/forgot_password"
            android:textColor="@color/colorTextOnBoarding"
            android:layout_marginTop="@dimen/marginMediumGlobal"
            android:background="?selectableItemBackground"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom|center_horizontal"
        android:visibility="gone"
        android:gravity="center">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar" />

        <TextView
            style="@style/TextViewTechnoSmall"
            android:text="@string/loading"
            android:textColor="@color/colorTextOnBoarding"/>

    </LinearLayout>

</FrameLayout>
