<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".ui.MainActivity">

    <item
        android:id="@+id/action_filter"
        android:title="@string/filter"
        android:icon="@mipmap/ic_filter_white_24dp"
        android:orderInCategory="1"
        app:showAsAction="ifRoom|withText"
        android:visible="false"/>

    <item
        android:id="@+id/action_new_category"
        android:title="@string/new_category"
        android:orderInCategory="2"
        app:showAsAction="never"
        android:visible="false"/>

    <item
        android:id="@+id/action_sync_category"
        android:title="Sync"
        android:orderInCategory="3"
        app:showAsAction="always"
        android:visible="false"/>

    <item
        android:id="@+id/action_insert_db"
        android:title="Insert DB"
        android:orderInCategory="97"
        app:showAsAction="never"
        android:visible="false"/>

    <item
        android:id="@+id/action_show_db"
        android:title="Show DB"
        android:orderInCategory="98"
        app:showAsAction="never"
        android:visible="false"/>

    <item
        android:id="@+id/action_delete_db"
        android:title="Delete DB"
        android:orderInCategory="99"
        app:showAsAction="never"
        android:visible="false"/>

    <item
        android:id="@+id/action_update_db"
        android:title="Update DB"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:visible="false"/>

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="101"
        app:showAsAction="never"
        android:visible="false"/>

</menu>
