<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ripple="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    android:scrollbars="none"
    android:padding="@dimen/paddingMaxGlobal"
    tools:context="com.apaza.moises.visitsucre.fragment.SignUpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connect_with"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/textSecondary"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <com.andexert.library.RippleView
                    android:id="@+id/loginWithFace"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    ripple:rv_type="doubleRipple"
                    ripple:rv_zoom="true">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/marginMinGlobal"
                        android:layout_marginRight="@dimen/marginMinGlobal"
                        android:background="@drawable/background_button_facebook"
                        android:textColor="@android:color/white"
                        android:text="@string/facebook"
                        android:drawableLeft="@mipmap/ic_connect_facebook"/>

                </com.andexert.library.RippleView>

                <com.andexert.library.RippleView
                    android:id="@+id/loginWithG"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    ripple:rv_type="doubleRipple"
                    ripple:rv_zoom="true">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/marginMinGlobal"
                        android:layout_marginRight="@dimen/marginMinGlobal"
                        android:background="@drawable/background_button_g"
                        android:textColor="@android:color/white"
                        android:text="@string/google"
                        android:drawableLeft="@mipmap/ic_connect_google"/>

                </com.andexert.library.RippleView>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or_create_account"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/textSecondary"
                android:layout_marginTop="@dimen/marginMaxGlobal"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/marginMinGlobal">

                <com.andexert.library.RippleView
                    android:id="@+id/selectImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/marginMinGlobal"
                    ripple:rv_type="simpleRipple"
                    ripple:rv_zoom="true"
                    ripple:rv_color="@color/colorPrimary">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/default_profile"/>

                </com.andexert.library.RippleView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="@dimen/marginMinGlobal">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/tilName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            android:ems="10"
                            android:layout_weight="1"
                            android:hint="@string/name"/>

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/tilLastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/lastName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            android:ems="10"
                            android:layout_weight="1"
                            android:hint="@string/last_name"/>

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_phone"/>

                <Spinner
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:id="@+id/spinner" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:ems="10"
                        android:layout_weight="1"
                        android:hint="@string/phone"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_email"/>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:ems="10"
                        android:layout_weight="1"
                        android:hint="@string/email"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_password"/>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/tilPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:ems="10"
                            android:hint="@string/password"/>

                    </android.support.design.widget.TextInputLayout>

                    <com.andexert.library.RippleView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        ripple:rv_type="simpleRipple"
                        ripple:rv_zoom="true"
                        ripple:rv_color="@color/colorPrimary"
                        android:layout_gravity="right|center_vertical">

                        <ImageView
                            android:id="@+id/visibilityPassword"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/ic_visibility_off"
                            android:padding="@dimen/marginMinGlobal"/>

                    </com.andexert.library.RippleView>

                </FrameLayout>


            </LinearLayout>

            <com.andexert.library.RippleView
                android:id="@+id/createAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginMinGlobal"
                ripple:rv_type="doubleRipple"
                ripple:rv_zoom="true">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_button"
                    android:textColor="@android:color/white"
                    android:text="@string/create_account" />

            </com.andexert.library.RippleView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_margin="@dimen/marginMaxGlobal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_account"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/textSecondary"/>

            <com.andexert.library.RippleView
                android:id="@+id/access"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                ripple:rv_type="simpleRipple"
                ripple:rv_zoom="true"
                ripple:rv_color="@color/colorPrimary">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/access"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/colorPrimary"
                    android:paddingLeft="@dimen/paddingMinGlobal" />

            </com.andexert.library.RippleView>
        </LinearLayout>

    </LinearLayout>

</ScrollView>
