<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:moi="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.fragment.RegisterPlaceFragment">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/lyImages"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/grayTechno"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/selectImage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/ic_camera_burst_grey600_48dp"
                        android:padding="@dimen/paddingMaxGlobal"
                        android:layout_margin="@dimen/marginMaxGlobal"
                        android:layout_gravity="center_horizontal" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/paddingMinGlobal">

                    <Spinner
                        android:id="@+id/spCategory"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/marginMaxGlobal"/>

                    <com.apaza.moises.visitsucre.ui.InputTextView
                        android:id="@+id/itvName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        moi:iconImage="@mipmap/ic_camera_iris_grey600_24dp"
                        moi:hint="@string/name"
                        moi:maxLengthEnabled="true"
                        moi:maxLength="15"
                        android:inputType="textCapSentences"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical">

                        <ImageButton
                            android:id="@+id/iBtnSelectLocation"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/ic_google_maps_grey600_24dp"
                            android:padding="@dimen/paddingMinGlobal"
                            android:visibility="visible"/>

                        <TextView
                            android:id="@+id/tvAddressPlace"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="test 123123" />

                    </LinearLayout>

                    <com.apaza.moises.visitsucre.ui.InputTextView
                        android:id="@+id/itvDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        moi:iconImage="@mipmap/ic_pen_grey600_24dp"
                        moi:hint="@string/description"
                        moi:maxLengthEnabled="true"
                        moi:maxLength="250"
                        android:lines="3"
                        android:inputType="textMultiLine"/>

                    <!--<LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/ic_pen_grey600_24dp"
                            android:layout_marginTop="12dp"
                            android:padding="@dimen/paddingMinGlobal"/>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/tilDescription"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:errorEnabled="true"
                            app:counterOverflowTextAppearance="@style/CounterOverFlow"
                            app:counterTextAppearance="@style/Counter"
                            app:counterEnabled="true"
                            app:counterMaxLength="250">

                            <EditText
                                android:id="@+id/etDescription"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textCapSentences"
                                android:ems="10"
                                android:gravity="start|top"
                                android:lines="3"
                                android:hint="@string/description"/>

                        </android.support.design.widget.TextInputLayout>

                    </LinearLayout>-->


                    <Button
                        android:id="@+id/btnSave"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/background_button"
                        android:textColor="@android:color/white"
                        android:text="@string/register" />


                </LinearLayout>

            </LinearLayout>
            
        </ScrollView>


    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:src="@mipmap/ic_camera_white_24dp"
        app:borderWidth="0dp"
        app:layout_anchor="@id/lyImages"
        app:layout_anchorGravity="bottom|right|end" />

</android.support.design.widget.CoordinatorLayout>
